Allow MaProper's volatile fallback on CI-tests

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ overflow-checks = true
 [features]
 default = []
 use-maproper = ["ma_proper"]
+use-maproper-volatile = ["ma_proper/volatile_fallback"]
 
 
 [dependencies]
