--- a/.travis.yml
+++ b/.travis.yml
@@ -28,5 +28,5 @@ install:
 script:
   - cargo test --verbose
   - cargo test --verbose --release
-  - cargo test --verbose --features="use-maproper"
-  - cargo test --verbose --release --features="use-maproper"
+  - cargo test --verbose --features="use-maproper-volatile"
+  - cargo test --verbose --release --features="use-maproper-volatile"
