Limited the amounts of keywords to 5

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ version = "0.1.0"
 authors = ["Keziah Biermann <development@kizzycode.de>"]
 description = "A KISS CLI-wrapper around libsodium's `cryptobox_easy`"
 categories = ["cryptography"]
-keywords = ["security", "safe", "cryptography", "libsodium", "cryptobox", "encryption", "authenticated-encryption"]
+keywords = ["security", "safe", "cryptography", "libsodium", "cryptobox"]
 license = "BSD-2-Clause OR MIT"
 repository = "https://github.com/KizzyCode/Cryptobox"
 readme = "README.md"
