--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -3,9 +3,9 @@ image: ubuntu
 build_script:
   - curl https://sh.rustup.rs -sSf | sh -s -- -y
   - export PATH="$HOME/.cargo/bin:/usr/local/sbin:/usr/local/bin:$PATH"
-  - wget https://github.com/jedisct1/libsodium/archive/refs/tags/1.0.18.tar.gz -O libsodium-1.0.18.tar.gz
-  - tar xf libsodium-1.0.18.tar.gz
-  - cd libsodium-1.0.18 && ./configure && make check && sudo make install
+  - wget https://download.libsodium.org/libsodium/releases/libsodium-1.0.18-stable.tar.gz
+  - tar xf libsodium-1.0.18-stable.tar.gz
+  - cd libsodium-stable && ./configure && make check && sudo make install
 
 test_script:
   - cargo test --verbose
